--- a/packages/ui/src/index.scss
+++ b/packages/ui/src/index.scss
@@ -2,3 +2,4 @@
 @forward "./styles/properties.scss";
 @forward "./styles/interactions.scss";
 @forward "./styles/typography.scss";
+@forward "./styles/utilities.scss";
