--- a/packages/ui/src/styles/utilities.scss
+++ b/packages/ui/src/styles/utilities.scss
@@ -6,3 +6,8 @@
   white-space: nowrap;
   clip-path: inset(50%);
 }
+
+@mixin focus-ring($color) {
+  outline: 2px solid $color;
+  outline-offset: 2px;
+}
