--- a/packages/ui/src/components/Checkbox/Checkbox.module.scss
+++ b/packages/ui/src/components/Checkbox/Checkbox.module.scss
@@ -25,6 +25,7 @@
   height: 1.5rem;
   border-radius: 0.5rem;
   background-color: ui.$color-primary-overlay-01;
+  box-shadow: inset 0 0 0 2px ui.$color-primary-overlay-02;
   transition: background-color 150ms, transform 150ms;
 }
 
