--- a/packages/ui/src/components/Radio/Radio.module.scss
+++ b/packages/ui/src/components/Radio/Radio.module.scss
@@ -15,7 +15,7 @@
   }
 }
 
-.checkbox {
+.radio {
   @include ui.visually-hidden;
 }
 
@@ -23,7 +23,7 @@
   display: grid;
   width: 1.5rem;
   height: 1.5rem;
-  border-radius: 0.5rem;
+  border-radius: 50%;
   background-color: ui.$color-primary-overlay-01;
   box-shadow: inset 0 0 0 2px ui.$color-primary-overlay-02;
   transition: background-color 150ms, transform 150ms;
@@ -44,11 +44,20 @@
 }
 
 .indicatorIcon {
+  display: grid;
+  place-items: center;
   grid-area: 1 / 1;
-  fill: ui.$color-on-primary;
+
+  &::before {
+    content: "";
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: ui.$color-on-primary;
+  }
 }
 
-.checkbox {
+.radio {
   &:not(:checked) + .content .indicator {
     opacity: 0;
   }
