Remove theme package

--- a/packages/ui/src/index.scss
+++ b/packages/ui/src/index.scss
@@ -1,5 +1,6 @@
-@forward "./styles/preflight.scss";
+@forward "./styles/system.scss";
 @forward "./styles/properties.scss";
 @forward "./styles/interactions.scss";
 @forward "./styles/typography.scss";
 @forward "./styles/utilities.scss";
+@forward "./styles/preflight.scss";
