--- a/packages/ui/src/components/Radio/Radio.module.scss
+++ b/packages/ui/src/components/Radio/Radio.module.scss
@@ -75,6 +75,7 @@
   @include ui.active {
     + .content {
       transform: scale(0.95);
+      transition: none;
     }
   }
 
@@ -98,6 +99,7 @@
   @include ui.active {
     .content {
       transform: scale(0.95);
+      transition: none;
     }
   }
 }
