--- a/packages/ui/src/components/Checkbox/Checkbox.module.scss
+++ b/packages/ui/src/components/Checkbox/Checkbox.module.scss
@@ -66,6 +66,7 @@
   @include ui.active {
     + .content {
       transform: scale(0.95);
+      transition: none;
     }
   }
 
@@ -89,6 +90,7 @@
   @include ui.active {
     .content {
       transform: scale(0.95);
+      transition: none;
     }
   }
 }
