--- a/packages/ui/src/components/Dialog/Dialog.module.scss
+++ b/packages/ui/src/components/Dialog/Dialog.module.scss
@@ -1,3 +1,15 @@
+@use "@neetly/ui";
+
 .dialog {
   position: fixed;
+}
+
+.backdrop {
+  background-color: ui.$color-backdrop;
+  backdrop-filter: blur(2px);
+  transition: opacity 150ms;
+
+  &:not([data-enter]) {
+    opacity: 0;
+  }
 }
