--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -156,14 +156,16 @@
   align-items: center;
   gap: 0.75rem;
   grid-area: 1 / 1;
+  min-height: 1.5rem;
   padding: 0.5rem 1rem;
   border-radius: inherit;
 }
 
+.icon,
 .iconBefore,
 .iconAfter {
   width: 1.5rem;
   height: 1.5rem;
-  margin: -0.75rem -0.5rem;
+  margin: 0 -0.5rem;
   fill: currentColor;
 }
