--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -4,11 +4,9 @@
   all: unset;
 
   position: relative;
-  display: inline-grid;
+  display: inline-block;
+  padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-
-  @include ui.typography-ui(1rem, semibold);
-
   user-select: none;
   cursor: pointer;
   transition: opacity 150ms, background-color 150ms, transform 150ms;
@@ -56,7 +54,8 @@
 .button[data-variant="primary"] {
   &::before {
     content: "";
-    grid-area: 1 / 1;
+    position: absolute;
+    inset: 0;
     border-radius: inherit;
     transition: background-color 150ms;
   }
@@ -155,10 +154,7 @@
   grid-auto-flow: column;
   align-items: center;
   gap: 0.75rem;
-  grid-area: 1 / 1;
   min-height: 1.5rem;
-  padding: 0.5rem 1rem;
-  border-radius: inherit;
 }
 
 .icon,
@@ -168,4 +164,8 @@
   height: 1.5rem;
   margin: 0 -0.5rem;
   fill: currentColor;
+}
+
+.label {
+  @include ui.typography-ui(1rem, semibold);
 }
