--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -4,7 +4,8 @@
   all: unset;
 
   position: relative;
-  display: inline-block;
+  display: inline-grid;
+  place-content: center;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   user-select: none;
