--- a/packages/ui/src/components/Radio/Radio.module.scss
+++ b/packages/ui/src/components/Radio/Radio.module.scss
@@ -32,6 +32,7 @@
 }
 
 .indicator {
+  position: relative;
   display: grid;
   border-radius: inherit;
   background-color: ui.$color-primary;
@@ -39,16 +40,17 @@
 
   &::before {
     content: "";
-    grid-area: 1 / 1;
+    position: absolute;
+    inset: 0;
     border-radius: inherit;
     transition: background-color 150ms;
   }
 }
 
 .indicatorIcon {
+  position: relative;
   display: grid;
   place-items: center;
-  grid-area: 1 / 1;
 
   &::before {
     content: "";
