--- a/packages/ui/src/components/TextField/TextField.module.scss
+++ b/packages/ui/src/components/TextField/TextField.module.scss
@@ -26,14 +26,13 @@
 .content {
   position: relative;
   display: grid;
-  grid-template-columns: auto 1fr auto;
 
   &::before {
     content: "";
-    grid-area: 1 / 1 / 1 / 4;
-    margin: -4px;
-    border-radius: calc(0.5rem + 4px);
-    box-shadow: inset 0 0 0 2px ui.$color-primary;
+    position: absolute;
+    inset: -2px;
+    border-radius: calc(0.5rem + 2px);
+    box-shadow: 0 0 0 2px ui.$color-primary;
     pointer-events: none;
     transition: opacity 150ms;
   }
@@ -47,7 +46,7 @@
   all: unset;
 
   position: relative;
-  grid-area: 1 / 1 / 1 / 4;
+  min-height: 1.5rem;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
 
@@ -87,18 +86,19 @@
 
 .iconBefore,
 .iconAfter {
-  align-self: center;
+  position: absolute;
   width: 1.5rem;
   height: 1.5rem;
-  margin: -0.75rem 0.5rem;
   fill: ui.$color-neutral-variant;
   pointer-events: none;
 }
 
 .iconBefore {
-  grid-area: 1 / 1;
+  left: 0.5rem;
+  top: 0.5rem;
 }
 
 .iconAfter {
-  grid-area: 1 / 3;
+  right: 0.5rem;
+  top: 0.5rem;
 }
