--- a/packages/ui/src/components/TextField/TextField.module.scss
+++ b/packages/ui/src/components/TextField/TextField.module.scss
@@ -89,7 +89,7 @@
   position: absolute;
   width: 1.5rem;
   height: 1.5rem;
-  fill: ui.$color-neutral-variant;
+  fill: ui.$color-neutral-variant-accent;
   pointer-events: none;
 }
 
