--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -6,6 +6,7 @@
   position: relative;
   display: inline-grid;
   place-content: center;
+  box-sizing: border-box;
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   user-select: none;
