--- a/packages/cogen/src/App.module.scss
+++ b/packages/cogen/src/App.module.scss
@@ -1,7 +1,5 @@
 @use "sass:color";
 
-@use "@neetly/ui";
-
 .app {
   display: grid;
   gap: 1rem;
@@ -18,9 +16,14 @@
 }
 
 .preview {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.previewImage {
   height: 4rem;
   border-radius: 0.5rem;
-  background-image: var(--preview);
+  background-image: var(--image);
   box-shadow: inset 0 0 0 1px color.change(#000, $alpha: 0.1);
 
   @media (prefers-color-scheme: dark) {
