--- a/packages/color-website/src/App.module.scss
+++ b/packages/color-website/src/App.module.scss
@@ -10,19 +10,53 @@
   padding: 0 1rem;
 }
 
-.fields {
+.controller {
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: 12rem;
   gap: 1rem;
 }
 
-.preview {
+.color {
   display: grid;
-  gap: 0.25rem;
+  grid-template-columns: auto 1fr;
+  gap: 0 0.5rem;
 }
 
-.previewName {
+.colorLabel {
+  grid-column: span 2;
+  margin: 0;
+
+  @include ui.typography-ui(0.875rem, semibold);
+
+  color: ui.$color-neutral-variant;
+}
+
+.colorPreview {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 0.5rem;
+  background-color: var(--color);
+  box-shadow: inset 0 0 0 1px color.change(#000, $alpha: 0.1);
+
+  @media (prefers-color-scheme: dark) {
+    box-shadow: inset 0 0 0 1px color.change(#fff, $alpha: 0.1);
+  }
+}
+
+.colorValue {
+  align-self: center;
+
+  @include ui.typography-ui(1rem, medium);
+
+  color: ui.$color-neutral-variant-accent;
+}
+
+.preview {
+  display: grid;
+}
+
+.previewLabel {
   margin: 0;
 
   @include ui.typography-ui(0.875rem, semibold);
@@ -31,6 +65,7 @@
 }
 
 .previewImage {
+  position: relative;
   height: 4rem;
   border-radius: 0.5rem;
   background-image: var(--image);
@@ -38,5 +73,21 @@
 
   @media (prefers-color-scheme: dark) {
     box-shadow: inset 0 0 0 1px color.change(#fff, $alpha: 0.1);
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: var(--offset);
+    top: 50%;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: inset 0 0 0 1px #000, inset 0 0 0 2px #fff;
+
+    @media (prefers-color-scheme: dark) {
+      box-shadow: inset 0 0 0 1px #fff, inset 0 0 0 2px #000;
+    }
   }
 }
