--- a/packages/color-website/src/App.module.scss
+++ b/packages/color-website/src/App.module.scss
@@ -12,8 +12,7 @@
 
 .controller {
   display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: 12rem;
+  grid-template-columns: repeat(auto-fill, 12rem);
   gap: 1rem;
 }
 
