--- a/packages/color-website/src/App.module.scss
+++ b/packages/color-website/src/App.module.scss
@@ -6,8 +6,9 @@
   display: grid;
   gap: 1rem;
   max-width: 80rem;
-  margin: 1rem auto;
-  padding: 0 1rem;
+  margin-block: 1rem;
+  margin-inline: auto;
+  padding-inline: 1rem;
 }
 
 .controller {
