--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -7,7 +7,8 @@
   display: inline-grid;
   place-content: center;
   box-sizing: border-box;
-  padding: 0.5rem 1rem;
+  padding-block: 0.5rem;
+  padding-inline: 1rem;
   border-radius: 0.5rem;
   user-select: none;
   cursor: pointer;
@@ -164,7 +165,7 @@
 .iconAfter {
   width: 1.5rem;
   height: 1.5rem;
-  margin: 0 -0.5rem;
+  margin-inline: -0.5rem;
   fill: currentColor;
 }
 
