--- a/packages/ui/src/components/Checkbox/Checkbox.module.scss
+++ b/packages/ui/src/components/Checkbox/Checkbox.module.scss
@@ -2,10 +2,8 @@
 
 .container {
   display: inline-grid;
-  grid-template-columns: auto 1fr;
+  grid-template: "content label" / auto 1fr;
   align-items: center;
-  gap: 0.5rem;
-  user-select: none;
   cursor: pointer;
   transition: opacity 150ms;
 
@@ -23,11 +21,13 @@
 
 .content {
   display: grid;
+  grid-area: content;
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 0.5rem;
   background-color: ui.$color-primary-overlay-01;
   box-shadow: inset 0 0 0 2px ui.$color-primary-overlay-02;
+  user-select: none;
   transition: background-color 150ms, transform 150ms;
 }
 
@@ -100,6 +100,9 @@
 }
 
 .label {
+  grid-area: label;
+  margin-inline-start: 0.5rem;
+
   @include ui.typography-ui(1rem, medium);
 
   color: ui.$color-neutral-variant-accent;
