--- a/packages/ui/src/components/Spinner/Spinner.module.scss
+++ b/packages/ui/src/components/Spinner/Spinner.module.scss
@@ -1,9 +1,8 @@
 @use "@neetly/ui";
 
 .spinner {
-  display: inline-block;
-  width: 3rem;
-  height: 3rem;
+  display: inline-grid;
+  place-content: center;
 }
 
 .icon {
