--- a/packages/ui/src/components/TextInput/TextInput.module.scss
+++ b/packages/ui/src/components/TextInput/TextInput.module.scss
@@ -62,6 +62,10 @@
     background-color: ui.$color-primary-overlay-02;
   }
 
+  &[aria-invalid="true"] {
+    color: ui.$color-error;
+  }
+
   &:disabled {
     cursor: default;
   }
