Unify invalid and aria-invalid props

--- a/packages/ui/src/components/TextInput/TextInput.module.scss
+++ b/packages/ui/src/components/TextInput/TextInput.module.scss
@@ -62,7 +62,7 @@
     background-color: ui.$color-primary-overlay-02;
   }
 
-  &[aria-invalid="true"] {
+  &[aria-invalid]:not([aria-invalid="false"]) {
     color: ui.$color-error;
   }
 
