Rename button type text to plain

--- a/packages/ui/src/components/Button/Button.module.scss
+++ b/packages/ui/src/components/Button/Button.module.scss
@@ -113,7 +113,7 @@
   }
 }
 
-.button[data-variant="text"] {
+.button[data-variant="plain"] {
   &[data-color="primary"] {
     color: ui.$color-primary;
 
